release/0.2.0 - Use native Webview for macos